--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+EXCHANGE_API_ACCESS_KEY=8d8857202c3a6d3b2bad5a819c90b72e
+EXCHANGE_API_URL=https://api.exchangeratesapi.io/latest
