Move binlist url

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,4 @@ VITE_APP_NAME="${APP_NAME}"
 
 EXCHANGE_API_ACCESS_KEY=8d8857202c3a6d3b2bad5a819c90b72e
 EXCHANGE_API_URL=https://api.exchangeratesapi.io/latest
+API_BINLIST_URL=https://lookup.binlist.net/
